# mrsd-detection

./: .gitignore  .gitmodules
docker/: docker-compose-jp6.1-dev.yml  docker-compose-ros2.yml
gcs_logging/: atak_rosless_sim.py  atak_sim.py
gcs_logging/src/atak_sim/: package.xml  setup.cfg  setup.py
ros2_ghadron_gimbal/: .gitignore  README.md  docker.sh
ros2_ghadron_gimbal/dockers/: Dockerfile  Dockerfile_1  docker-compose.yaml
ros2_ghadron_gimbal/src/Adi_recording/: package.xml  rtsp_ros2.py  setup.py
ros2_ghadron_gimbal/src/gimbal_angle_control/: CMakeLists.txt  package.xml
ros2_ghadron_gimbal/src/gimbal_angle_control/src/: gimbal_angle_control_node.cpp
ros2_ghadron_gimbal/src/gimbal_bringup/: package.xml  setup.cfg  setup.py
ros2_ghadron_gimbal/src/gimbal_bringup/launch/: gimbal_system.launch.py
ros2_ghadron_gimbal/src/gimbal_status/: CMakeLists.txt  package.xml
ros2_ghadron_gimbal/src/gimbal_status/src/: gimbal_status_node.cpp
ros2_ghadron_gimbal/src/image_viewer/: package.xml  setup.py
ros2_ghadron_gimbal/src/image_viewer/image_viewer/: image_viewer_node.py
ros2_ghadron_gimbal/src/inted_gimbal/: package.xml  setup.cfg  setup.py
ros2_ghadron_gimbal/src/inted_gimbal/inted_gimbal/: GPSEstimator.py  gimbal_control.py  integrated_node.py  integrated_node_0.py  person_id.py  streaming.py  track.py  yolo.py
ros2_ghadron_gimbal/src/old/detect_and_track/: package.xml  setup.cfg  setup.py
ros2_ghadron_gimbal/src/old/detect_and_track/detect_and_track/: detect_track_node.py
ros2_ghadron_gimbal/src/old/detect_and_track/human_tracking/: package.xml  setup.cfg  setup.py
ros2_ghadron_gimbal/src/old/detect_and_track/human_tracking/human_tracking/: tracking_node.py
ros2_ghadron_gimbal/src/old/detect_and_track/stream_publisher/: package.xml  setup.cfg  setup.py
ros2_ghadron_gimbal/src/old/detect_and_track/stream_publisher/stream_publisher/: stream_node.py  stream_node_original.py
ros2_ghadron_gimbal/src/old/detect_and_track/yolo_detection/: package.xml  setup.py
ros2_ghadron_gimbal/src/old/detect_and_track/yolo_detection/yolo_detection/: yolo_detection_node.py
ros2_ghadron_gimbal/src/payload/: package.xml  setup.py
ros2_ghadron_gimbal/src/payload/payload/: payload_node.py  track.py
