<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gimbal_bringup</name>
  <version>0.0.1</version>
  <description>Launch package for gimbal system</description>
  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <!-- 添加所有需要的包依赖 -->
  <exec_depend>gimbal_angle_control</exec_depend>
  <exec_depend>gimbal_status</exec_depend>
  <exec_depend>eo_zoom</exec_depend>
  <exec_depend>ir_zoom</exec_depend>
  <!-- <exec_depend>yolo_detection</exec_depend> -->
  <exec_depend>inted_gimbal</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
